--- a/meta/3-2.md
+++ b/meta/3-2.md
@@ -39,4 +39,7 @@ Prävention ist im Gesundheitswesen ein Oberbegriff für zielgerichtete Maßnahm
 <br>
 <b>Verhältnisprävention (bzw. strukturelle Prävention):</b> Darunter versteht man so genannte "umgebungsorientierte" Maßnahmen. Dazu zählt das Einwirken auf jene Entstehungsbedingungen, die über eine Einzelperson hinausgehen: Lebens- und Arbeitsbedingungen, Gesetze, Gesundheits- und sozialpolitische Maßnahmen. Verhältnisprävention kann auch als strukturorientierte bzw. strukturelle Prävention bezeichnet werden, da sie sich auf die Strukturen rund um die eigentlichen Zielpersonen richtet. Dazu zählen beispielsweise Maßnahmen wie Alters- und Werbebeschränkungen, die Steuerung der Verfügbarkeit und des Preises, aber auch die Gestaltung grundlegender Rahmenbedingungen wie Bildungspolitik, Maßnahmen gegen die Jugendarbeitslosigkeit oder gerechte Ressourcenverteilung. <br>
 <br>
-Quelle: <a href="https://www.praevention.at/sucht-und-suchtvorbeugung/begriffs-und-problemdefinitionen/der-begriff-praevention">Institut Suchtprävention</a> und <a href="https://www.bundesgesundheitsministerium.de/service/begriffe-von-a-z/p/praevention.html">Bundesgesundheitsministerium</a>
+Quelle: <a href="https://www.praevention.at/sucht-und-suchtvorbeugung/begriffs-und-problemdefinitionen/der-begriff-praevention">Institut Suchtprävention</a> und <a href="https://www.bundesgesundheitsministerium.de/service/begriffe-von-a-z/p/praevention.html">Bundesgesundheitsministerium</a><br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
+N2.1: Reduzierung der gesundheitlichen physischen und psychischen Belastung und Sicherstellung von ausreichenden Präventions- und Suchtmaßnahmen
