--- a/meta/3-3.md
+++ b/meta/3-3.md
@@ -32,3 +32,6 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Anzahl der Hausärztinnen und Hausärzte, die an der kassenärztlichen Versorgung teilnehmen (ambulant) je 100.000 Einwohner/-innen. <br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
+N2.4: Sicherstellung einer ausreichenden medizinischen Infrastruktur im städtischen Raum
