--- a/meta/3-4.md
+++ b/meta/3-4.md
@@ -31,4 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Absolute Anzahl der zugelassenen, angestellten und ermächtigten Ärzt/-innen zur vertragsärztlichen Versorgung, unabhängig von ihrem Tätigkeitsumfang oder ihrer Berücksichtigung in der Bedarfsplanung. <br>
+Absolute Anzahl der zugelassenen, angestellten und ermächtigten Ärzt/-innen zur vertragsärztlichen Versorgung, unabhängig von ihrem Tätigkeitsumfang oder ihrer Berücksichtigung in der Bedarfsplanung.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
+N2.4: Sicherstellung einer ausreichenden medizinischen Infrastruktur im städtischen Raum
