--- a/meta/3-5.md
+++ b/meta/3-5.md
@@ -32,4 +32,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Im Messwertarchiv steht eine umfangreiche Sammlung der kontinuierlich erfassten Luftschadstoffmessdaten des LÜB-Messnetzes seit dem Jahr 1980 in stündlicher zeitlicher Auflösung zum Download zur Verfügung. Das Datenangebot umfasst die Stoffe Stickstoffdioxid, Stickstoffmonoxid, Feinstaub-PM10, Feinstaub-PM2,5, Ozon, Kohlenmonoxid, BTX (Benzol, Toluol und o-Xylol), Schwefeldioxid und Schwefelwasserstoff. Hier wird der Jahresmittelwert des Feinstaub-PM10 an der Messstation Rechbergstraße in Ingolstadt angegeben. Lokal und ausschließlich an vom Verkehr beeinflussten Stationen in Ballungsräumen traten in der Vergangenheit gelegentlich Überschreitungen des für das Kalenderjahr festgelegten Grenzwerts von 40 µg/m³ auf. Seit 2012 wurden keine Überschreitungen dieses Grenzwertes mehr festgestellt. <br>
+Im Messwertarchiv steht eine umfangreiche Sammlung der kontinuierlich erfassten Luftschadstoffmessdaten des LÜB-Messnetzes seit dem Jahr 1980 in stündlicher zeitlicher Auflösung zum Download zur Verfügung. Das Datenangebot umfasst die Stoffe Stickstoffdioxid, Stickstoffmonoxid, Feinstaub-PM10, Feinstaub-PM2,5, Ozon, Kohlenmonoxid, BTX (Benzol, Toluol und o-Xylol), Schwefeldioxid und Schwefelwasserstoff. Hier wird der Jahresmittelwert des Feinstaub-PM10 an der Messstation Rechbergstraße in Ingolstadt angegeben. Lokal und ausschließlich an vom Verkehr beeinflussten Stationen in Ballungsräumen traten in der Vergangenheit gelegentlich Überschreitungen des für das Kalenderjahr festgelegten Grenzwerts von 40 µg/m³ auf. Seit 2012 wurden keine Überschreitungen dieses Grenzwertes mehr festgestellt.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
+N2.1: Reduzierung der gesundheitlichen physischen und psychischen Belastung und Sicherstellung von ausreichenden Präventions- und Suchtmaßnahmen
