--- a/meta/3-6.md
+++ b/meta/3-6.md
@@ -46,4 +46,7 @@ Gemeldete Arbeitsstellen nach Berufsgruppen und Anforderungsniveau:
 - Gesundh., Krankenpfl, Rettungsd., Geburtsh.
 - Psychologie, nichtärztliche Psychotherapie
 
-Daten für 2023: Stand 03.2023  <br>
+(Daten für 2023: Stand 03.2023)  <br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
+N2.4: Sicherstellung einer ausreichenden medizinischen Infrastruktur im städtischen Raum
