--- a/meta/3-7.md
+++ b/meta/3-7.md
@@ -32,3 +32,6 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Anzahl der Todesfälle von Personen unter 70 Jahren. <br> 
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+N2.5: Ermöglichung eines guten Lebens im Alter
