--- a/meta/4-2.md
+++ b/meta/4-2.md
@@ -36,4 +36,7 @@ Stand: 11.04.2023
 Aktuell sind 90 Workshops und Seminare geplant – dazu kommen die Workshops und Seminare auf Anfrage der Ämter
 E-Learning-Angebote gibt es derzeit 160 Kurse WebCampus - WeLEARNING
 Berufsbegleitende Weiterbildungen – aktuell laufen 49 berufsbegleitende Weiterbildungen
-Fachspezifische Fortbildungen (vorwiegend über die Bayerische Verwaltungsschule und andere externe Anbieter) – letztes Jahr waren es insgesamt 610 Inanspruchnahmen auf Anfrage der Mitarbeiter/-innen aus allen Ämtern
+Fachspezifische Fortbildungen (vorwiegend über die Bayerische Verwaltungsschule und andere externe Anbieter) – letztes Jahr waren es insgesamt 610 Inanspruchnahmen auf Anfrage der Mitarbeiter/-innen aus allen Ämtern<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
+W3.2: Sicherung einer qualitativ hochwertigen Beschäftigung
