--- a/meta/4-3.md
+++ b/meta/4-3.md
@@ -17,7 +17,7 @@ data_start_values:  # initialize the field to be shown
    value: Bayern 
 
 # 3. Berechnung und Quelle eingeben: 
-national_geographical_coverage: Ingolsatdt 
+national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
 SOURCE_TYPE: <a href= "https://www.regionalstatistik.de/genesis/online?operation=statistic&levelindex=0&levelid=1651215646954&code=22543#abreadcrumb">Regionalstatistik</a>
@@ -33,3 +33,6 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Prozentualer Anteil der unter drei-jährigen Kindern in öffentlichen Kindertagesstätten. Der Ausbau der Krippenplätze  schreitet voran und in den nächsten Jahren werden weitere Einrichtungen eröffnet. <br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+B2.4: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit
