--- a/meta/4-4.md
+++ b/meta/4-4.md
@@ -32,3 +32,6 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Von 120 Kita-Einrichtungen sind 8 integrative Einrichtungen. Integrative Plätze werden auch in vielen anderen Einrichtungen im Verhältnis 1 zu 3 vergeben.  Im Jahr 2021 wurden 168 I-Kinder in 52 nicht integrativen  Einrichtungen betreut. <br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+B2.4: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit
