--- a/meta/4-5.md
+++ b/meta/4-5.md
@@ -31,4 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anzahl der unter 3-jährigen Kinder in öff. Tageseinrichtungen.
+Anzahl der unter 3-jährigen Kinder in öff. Tageseinrichtungen.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+B2.4: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit
