--- a/meta/4-6.md
+++ b/meta/4-6.md
@@ -31,4 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anzahl des Personals in öffentlich geförderter Kindertagespflege. <br>
+Anzahl des Personals in öffentlich geförderter Kindertagespflege.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+B2.4: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit
