--- a/meta/4-7.md
+++ b/meta/4-7.md
@@ -34,3 +34,6 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Prozentualer Anteil Schulabbrechenden ohne Mittelschulabschluss. <br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+B2.4: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit
