--- a/meta/4-9.md
+++ b/meta/4-9.md
@@ -33,4 +33,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Die wohnortnahe Versorgung der Grundschüler/-innen in Bayern regelt die sogenannte Sprengelpflicht Art. 42 BayEUG. Schüler/-innen einer Grundschule oder Mittelschule erfüllen ihre Schulpflicht in der Schule, in deren Schulsprengel sie ihren gewöhnlichen Aufenthalt haben.  Die jeweilige Bezirksregierung bestimmt für jede Grundschule ein räumlich abgegrenztes Gebiet als Schulsprengel Art. 26 BayEUG. Die Stadt Ingolstadt als Sachaufwandsträger wird an der Sprengelfestlegung beteiligt. Zahlen zur einwohnergewichteten Luftliniendistanz sind aufgrund der Sprengelregelung für die Schulverwaltung nicht erforderlich und werden daher nicht erhoben. <br>
+Die wohnortnahe Versorgung der Grundschüler/-innen in Bayern regelt die sogenannte Sprengelpflicht Art. 42 BayEUG. Schüler/-innen einer Grundschule oder Mittelschule erfüllen ihre Schulpflicht in der Schule, in deren Schulsprengel sie ihren gewöhnlichen Aufenthalt haben.  Die jeweilige Bezirksregierung bestimmt für jede Grundschule ein räumlich abgegrenztes Gebiet als Schulsprengel Art. 26 BayEUG. Die Stadt Ingolstadt als Sachaufwandsträger wird an der Sprengelfestlegung beteiligt. Zahlen zur einwohnergewichteten Luftliniendistanz sind aufgrund der Sprengelregelung für die Schulverwaltung nicht erforderlich und werden daher nicht erhoben.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+B2.4: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit
