--- a/meta/5-1.md
+++ b/meta/5-1.md
@@ -67,4 +67,7 @@ Die Anzahl der Angebote für Vereinbarkeit von Beruf und Familie für städtisch
    <li>genehmigte Sabaticals: 7 (Start Pilotprojekt: 01.07.2021 in drei Referaten</li>
   </ul>
  </li>
- </ul>
+ </ul><br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+W3.3: Erreichung gleicher wirtschaftlicher Unabhängigkeit durch gleiche und gleichwertige Arbeit
