--- a/meta/5-3.md
+++ b/meta/5-3.md
@@ -31,4 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anzahl von Empfänger/-innen von sozialer Mindestsicherung insgesamt (ohne Asylbewerber und BaföG-Empfänger). Die Transferleistungen der sozialen Mindestsicherungssysteme sind finanzielle Hilfen des Staates, die – zumindest ergänzend zu eventuell vorhandenen anderen Einkünften – zur Sicherung des grundlegenden Lebensunterhalts an leistungsberechtigte Personen ausgezahlt werden. <br>
+Anzahl von Empfänger/-innen von sozialer Mindestsicherung insgesamt (ohne Asylbewerber und BaföG-Empfänger). Die Transferleistungen der sozialen Mindestsicherungssysteme sind finanzielle Hilfen des Staates, die – zumindest ergänzend zu eventuell vorhandenen anderen Einkünften – zur Sicherung des grundlegenden Lebensunterhalts an leistungsberechtigte Personen ausgezahlt werden.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+V1.10: Armutsbekämpfung
