--- a/meta/5-4.md
+++ b/meta/5-4.md
@@ -31,4 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Prozentualer Frauenanteil im Stadtrat, Gemeinderat bzw. Kreistag. <br>
+Prozentualer Frauenanteil im Stadtrat, Gemeinderat bzw. Kreistag.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+V1.5: Förderung von Integration, Inklusion und Gleichstellung der Verwaltungsgremien
