--- a/meta/5-5.md
+++ b/meta/5-5.md
@@ -33,3 +33,6 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Quote der sozialversicherungspflichtig beschäftigten Frauen und Männer zwischen 15 - 65 Jahren. <br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+W3.3: Erreichung gleicher wirtschaftlicher Unabhängigkeit durch gleiche und gleichwertige Arbeit
