--- a/meta/5-6.md
+++ b/meta/5-6.md
@@ -32,3 +32,6 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Der Verdienstabstand zwischen Frauen und Männern in Euro, gemessen am Medianeinkommen.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+V1.3: Förderung der geschlechterunabhängigen Chancengleichheit
