--- a/meta/6-1.md
+++ b/meta/6-1.md
@@ -31,4 +31,7 @@ reporting_status: inprogress
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anzahl sanitärer Einrichtungen im öffentlichen Raum. <br>
+Anzahl sanitärer Einrichtungen im öffentlichen Raum.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+N1.6: Schaffung von sanitären Einrichtungen im öffentlichen Raum, Barrierefreiheit beachten, Sicherung vor Vandalismus
