--- a/meta/6-2.md
+++ b/meta/6-2.md
@@ -31,4 +31,7 @@ reporting_status: inprogress
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anzahl der Trinkwasserbrunnen
+Anzahl der Trinkwasserbrunnen<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+N1.6: Schaffung von sanitären Einrichtungen im öffentlichen Raum, Barrierefreiheit beachten, Sicherung vor Vandalismus
