--- a/meta/6-3.md
+++ b/meta/6-3.md
@@ -39,4 +39,7 @@ Messstellen-Nr.: 1131723400217 <br>
 Gemeinde: Ingolstadt <br>
 Landkreis: Ingolstadt <br>
 Betreiber: WWA Ingolstadt <br>
-Nitrat (mg/l): 8.1 (Letzter Stand: 3.11.2021) <br> 
+Nitrat (mg/l): 8.1 (Letzter Stand: 3.11.2021)<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+K2.3: Vernetzung, Entwicklung und Erhalt schützenswerter Flächen
