--- a/meta/6-4.md
+++ b/meta/6-4.md
@@ -31,4 +31,7 @@ reporting_status: inprogress
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-In einem Mischwasserkanal wird Schmutz- und Regenwasser gemeinsam abgeleitet, bei Trennkanalisation erfolgt die Ableitung in getrennten Schmutz- und Regenwasserkanälen. <br>
+In einem Mischwasserkanal wird Schmutz- und Regenwasser gemeinsam abgeleitet, bei Trennkanalisation erfolgt die Ableitung in getrennten Schmutz- und Regenwasserkanälen.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+K2.6: Sicherstellung einer funktionierenden Abwasserbehandlung
