--- a/meta/7-1.md
+++ b/meta/7-1.md
@@ -32,4 +32,7 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Strom aus Windkraft in Watt je Einwohner/-in. <br>
-Sinkend, da Leistung gleich, jedoch steigt die Einwohnerzahl. Bayerische Hemmnisse, z.B. 10-H-Regel.
+Sinkend, da Leistung gleich, jedoch steigt die Einwohnerzahl. Bayerische Hemmnisse, z.B. 10-H-Regel.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+K1.2: Ausbau von erneuerbaren Energien, insbesondere Erzeugung von regenerativem Strom vor Ort
