--- a/meta/8-1.md
+++ b/meta/8-1.md
@@ -9,7 +9,7 @@ indicator_sort_order: 08-01-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Anzahl Aufstocker/-innen 
+computation_units: Anteil Aufstocker/-innen 
 data_start_values:  # initialize the field to be shown  
  - field: Region 
    value: Ingolstadt 
@@ -32,3 +32,6 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Anteil der erwerbstätigen ALG-II Bezieher/-innen an allen erwerbsfähigen Leistungsbezieher/-innen. <br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+W3.1: Förderung von lebenslangem Lernen (inkl. Menschen in besonderen Lebenslagen)
