--- a/meta/8-2.md
+++ b/meta/8-2.md
@@ -33,3 +33,6 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Prozentualer Anteil der Beschäftigten im Alter von 15 bis 64 Jahre. <br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+W3.3: Erreichung gleicher wirtschaftlicher Unabhängigkeit durch gleiche und gleichwertige Arbeit
