--- a/meta/8-4.md
+++ b/meta/8-4.md
@@ -31,4 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Die Drittmittel sind die Summen der für das Kalenderjahr verbuchten Einnahmen (31.12.).
+Die Drittmittel sind die Summen der für das Kalenderjahr verbuchten Einnahmen (31.12.). <br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+W2.3: Förderung der Wissenschaft und deren Vernetzung mit Gesellschaft und Wirtschaft (in allen Branchen, Unternehmensformen/-größen)
