--- a/meta/8-5.md
+++ b/meta/8-5.md
@@ -32,4 +32,7 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Langzeitarbeitslosenquote: Prozentualer Anteil, der länger als 1 Jahr arbeitslos ist. <br>
-Anstieg bedingt durch die Corona-Pandemie von 2020 auf 2021. Schwankung in 2022: Starker Einfluss durch Geflüchtete aus der Ukraine. Diese sind noch unter einem Jahr im Leistungsbezug und senken somit in Relation den prozentualen Anteil der Langzeitarbeitslosen deutlich. In 2022 Fokus auf die Vermittlung von Langzeitbezieher/-innen, unter denen sich auch Langzeitarbeitslose befanden. <br>
+Anstieg bedingt durch die Corona-Pandemie von 2020 auf 2021. Schwankung in 2022: Starker Einfluss durch Geflüchtete aus der Ukraine. Diese sind noch unter einem Jahr im Leistungsbezug und senken somit in Relation den prozentualen Anteil der Langzeitarbeitslosen deutlich. In 2022 Fokus auf die Vermittlung von Langzeitbezieher/-innen, unter denen sich auch Langzeitarbeitslose befanden.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+W3.3: Erreichung gleicher wirtschaftlicher Unabhängigkeit durch gleiche und gleichwertige Arbeit
