--- a/meta/9-1.md
+++ b/meta/9-1.md
@@ -31,4 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Gesamtzahl der angesiedelten Unternehmen im Existenzgründerzentrum (EGZ) und im digitalen Gründerzentrum brigk in Ingolstadt. <br>
+Gesamtzahl der angesiedelten Unternehmen im Existenzgründerzentrum (EGZ) und im digitalen Gründerzentrum brigk in Ingolstadt.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+W1.2: Förderung branchenübergreifender Existenzgründungen zum Aufbau einer diversen Wirtschaftsstruktur
