--- a/meta/9-2.md
+++ b/meta/9-2.md
@@ -31,4 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Der Glasfaserausbau ist in Ingolstadt bis auf die Innenstadt abgeschlossen.
+Der Glasfaserausbau ist in Ingolstadt bis auf die Innenstadt abgeschlossen.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+N3.2: Umsetzung einer nachhaltigen und generationsgerechten Stadtplanung, Gemeinflächen-bedarf sicherstellen, Wohnflächen pro Kopf reduzieren
