--- a/meta/9-3.md
+++ b/meta/9-3.md
@@ -32,4 +32,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Existenzgründungen je 1.000 Einwohner. Eine natürliche Person, die eine gewerbliche oder selbstständige berufliche Tätigkeit aufnimmt (§ 507 BGB). <br>
+Existenzgründungen je 1.000 Einwohner. Eine natürliche Person, die eine gewerbliche oder selbstständige berufliche Tätigkeit aufnimmt (§ 507 BGB).<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+W1.2: Förderung branchenübergreifender Existenzgründungen zum Aufbau einer diversen Wirtschaftsstruktur
