--- a/meta/9-4.md
+++ b/meta/9-4.md
@@ -31,4 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anzahl der sozialversicherungspflichtig Beschäftigten mit Hochschulabschluss in Ingolstadt. Als akademischer Abschluss gilt ein Hochschulabschluss in Form von Bachelor, Diplom, Magister, Master, Staatsexamen oder Promotion. <br>
+Anzahl der sozialversicherungspflichtig Beschäftigten mit Hochschulabschluss in Ingolstadt. Als akademischer Abschluss gilt ein Hochschulabschluss in Form von Bachelor, Diplom, Magister, Master, Staatsexamen oder Promotion.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+W3.3: Erreichung gleicher wirtschaftlicher Unabhängigkeit durch gleiche und gleichwertige Arbeit
