--- a/meta/10-1.md
+++ b/meta/10-1.md
@@ -31,4 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Erfasste Förderschulen (SFZI, SFZII (beide städtisch) und JNVK (staatlich)); Ermittlung des Indikators umfasst auch die privaten Schulen; Berechnung jedoch ohne die Schüler/-innen an Technikerschule und Berufsfachschulen. Anteil an Gesamtschülerzahl Stadt Ingolstadt. 
+Erfasste Förderschulen (SFZI, SFZII (beide städtisch) und JNVK (staatlich)); Ermittlung des Indikators umfasst auch die privaten Schulen; Berechnung jedoch ohne die Schüler/-innen an Technikerschule und Berufsfachschulen. Anteil an Gesamtschülerzahl Stadt Ingolstadt.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+B2.4: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit
