--- a/meta/10-2.md
+++ b/meta/10-2.md
@@ -31,4 +31,7 @@ reporting_status: inprogress
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Einrichtung der Antidiskriminierungsstelle in Ingolstadt 2023. Bisher konnten noch keine Daten gesammelt werden.
+Einrichtung der Antidiskriminierungsstelle in Ingolstadt 2023. Bisher konnten noch keine Daten gesammelt werden.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+V1.1: Abbau von Ungleichheiten zwischen Stadtteilen und Bevölkerungsschichten
