--- a/meta/10-3.md
+++ b/meta/10-3.md
@@ -31,4 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Zur ausländischen Bevölkerung zählen alle Personen, die nicht Deutsche im Sinne des Art. 116 Abs. 1 GG sind, d. h. nicht die deutsche Staatsangehörigkeit besitzen. Zu ihnen gehören auch die Staatenlosen und die Personen mit ungeklärter Staatsangehörigkeit. Deutsche, die zugleich eine fremde Staatsangehörigkeit besitzen, gehören nicht zu den Ausländer/-innen.
+Zur ausländischen Bevölkerung zählen alle Personen, die nicht Deutsche im Sinne des Art. 116 Abs. 1 GG sind, d. h. nicht die deutsche Staatsangehörigkeit besitzen. Zu ihnen gehören auch die Staatenlosen und die Personen mit ungeklärter Staatsangehörigkeit. Deutsche, die zugleich eine fremde Staatsangehörigkeit besitzen, gehören nicht zu den Ausländer/-innen.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+W3.3: Erreichung gleicher wirtschaftlicher Unabhängigkeit durch gleiche und gleichwertige Arbeit
