--- a/meta/10-4.md
+++ b/meta/10-4.md
@@ -32,3 +32,6 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Schulabbrecherquote ausländischer Schüler im Verhältnis zur Schulabbrecherquote in der Gesamtbevölkerung. Als Schulabbruch wird ein Schulabgang ohne Hauptschulabschluss verstanden. <br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+B2.4: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit
