--- a/meta/10-5.md
+++ b/meta/10-5.md
@@ -31,4 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Prozentualer Anteil der Kinder mit sprachlichen Auffälligkeiten bei der Schuleingangsuntersuchung (Kinder mit und ohne Migrationshintergrund).
+Prozentualer Anteil der Kinder mit sprachlichen Auffälligkeiten bei der Schuleingangsuntersuchung (Kinder mit und ohne Migrationshintergrund).<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+B2.4: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit
