--- a/meta/10-7.md
+++ b/meta/10-7.md
@@ -32,3 +32,6 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Der Gini-Koeffizient ist ein statistisches Standardmaß zur Messung der Ungleichheit einer Verteilung. Er kann Werte zwischen 0 und 1 annehmen. Je höher der Wert, desto stärker ausgeprägt ist die gemessene Ungleichheit. Beispielsweise ein Gini-Koeffizient von 0 hier bedeuten, dass alle verglichenen Personen genau die gleiche Wohnfläche zur Verfügung haben würden. Ein Wert von 1 dagegen bedeutet, dass eine Person die gesamte Fläche besitzt und alle anderen nichts. <br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+V1.1: Abbau von Ungleichheiten zwischen Stadtteilen und Bevölkerungsschichten
