--- a/meta/11-10.md
+++ b/meta/11-10.md
@@ -32,3 +32,6 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Die prozentuale Änderungsrate von Siedlungs- und Verkehrsflächen im Vergleich zum Vorjahr in Prozent. <br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+K2.3: Vernetzung, Entwicklung und Erhalt schützenswerter Flächen
