--- a/meta/11-11.md
+++ b/meta/11-11.md
@@ -31,4 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Siedlungs- und Verkehrsfläche in m² pro Einwohner/-in, die in Ingolstadt genutzt werden. <br>
+Siedlungs- und Verkehrsfläche in m² pro Einwohner/-in, die in Ingolstadt genutzt werden.  <br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+K2.3: Vernetzung, Entwicklung und Erhalt schützenswerter Flächen
