--- a/meta/11-12.md
+++ b/meta/11-12.md
@@ -31,4 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Lärmbelastete Fläche ist kein technisch oder rechtlich abgesicherter Ausdruck. Betrachtet man Lärmbrennpunkte im Sinne des § 47 d Bundes-Immissionsschutzgesetz als Lärmbelastete Flächen, dann wären in Ingolstadt 90 Stück vorhanden. Die Tendenz ist gleichbleibend.
+Lärmbelastete Fläche ist kein technisch oder rechtlich abgesicherter Ausdruck. Betrachtet man Lärmbrennpunkte im Sinne des § 47 d Bundes-Immissionsschutzgesetz als Lärmbelastete Flächen, dann wären in Ingolstadt 90 Stück vorhanden. Die Tendenz ist gleichbleibend. <br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+N3.2: Umsetzung einer nachhaltigen und generationsgerechten Stadtplanung, Gemeinflächen-bedarf sicherstellen, Wohnflächen pro Kopf reduzieren
