--- a/meta/11-13.md
+++ b/meta/11-13.md
@@ -32,3 +32,6 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Mietpreise ohne geförderten Wohnungsbau. Angegeben wird die durchschnittliche Nettokaltmiete in € je m². <br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+N3.1: Schaffung von bezahlbarem und barrierefreiem Wohnraum unter Berücksichtigung der Ressourcenschonung
