--- a/meta/11-14.md
+++ b/meta/11-14.md
@@ -31,4 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Rückgang der Fläche pro Einwohner/-in aufgrund Wachstum der Einwohnerzahl. Berücksichtigt wurden nur im Flächennutzungsplan (FNP) aufgezeigte Naherholungsflächen (723 ha), demnach ist der Bereich des Schafirrsees nicht miteinbezogen. <br>
+Rückgang der Fläche pro Einwohner/-in aufgrund Wachstum der Einwohnerzahl. Berücksichtigt wurden nur im Flächennutzungsplan (FNP) aufgezeigte Naherholungsflächen (723 ha), demnach ist der Bereich des Schafirrsees nicht miteinbezogen.  <br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+K2.7: Naherholung mit ökologischen Aspekten vereinen
