--- a/meta/11-16.md
+++ b/meta/11-16.md
@@ -32,3 +32,6 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Entfernung im innerstädtischen Bereich Luftlinie jeweils 300 Meter und in den Vorortern maximal 600 Meter Luftlinie. Entspricht den ÖPNV Richtlinien. <br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+N4.1: Steigerung umweltfreundlicher und sicherer Mobilität
