--- a/meta/11-17.md
+++ b/meta/11-17.md
@@ -31,4 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Die Pkw-Dichte in der Stadt Ingolstadt ist aktuell höher als in den anderen bayerischen Großstädten. Allerdings ist die Zahl der zugelassenen Pkw in Ingolstadt aufgrund der Zuordnung von Dienstwagen und Leasing-Fahrzeugen nach oben hin verzerrt. Ein Großteil hatten eine gewerbliche Zulassung. Das führt auch dazu, dass Ingolstadt formal eine höhere Pkw-Dichte aufweist als die Nachbarlandkreise. In der Regel ist die Pkw-Dichte im ländlichen Raum eher höher als in den Metropolen.
+Die Pkw-Dichte in der Stadt Ingolstadt ist aktuell höher als in den anderen bayerischen Großstädten. Allerdings ist die Zahl der zugelassenen Pkw in Ingolstadt aufgrund der Zuordnung von Dienstwagen und Leasing-Fahrzeugen nach oben hin verzerrt. Ein Großteil hatten eine gewerbliche Zulassung. Das führt auch dazu, dass Ingolstadt formal eine höhere Pkw-Dichte aufweist als die Nachbarlandkreise. In der Regel ist die Pkw-Dichte im ländlichen Raum eher höher als in den Metropolen.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+N4.2: Reduktion des motorisierten Individualverkehrs
