--- a/meta/11-19.md
+++ b/meta/11-19.md
@@ -32,3 +32,6 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Zahl der Verkehrsunfälle mit Personenschäden möglichweise u.a. aufgrund der Kontaktbeschränkungen 2020 und 2021 zurückgegangen. Seit 2022 ist wieder ein leichter Anstieg zu verzeichnen. <br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+N4.5: Verbesserung der Verkehrssicherheit
