--- a/meta/11-2.md
+++ b/meta/11-2.md
@@ -37,4 +37,7 @@ Grundsätzlich gilt: Wenn Straßenbau- bzw. -Sanierungsmaßnahmen stattfinden un
 <br>
 Der gelbe Vorlesetaster mit der „text-to-speech“-Funktion wird zusammen mit den DFI-Anzeigern an Haltestellen der INVG installiert. Mit Abschluss der 2. Baustufe konnten bisher 130 Haltestellen im Stadtgebiet realisiert werden.<br>
 <br>
-An den zentralen Haltestellen ZOB und Nordbahnhof verweisen Linienbezeichnungen in Braille-Schrift auf die jeweilige Bussteignummer.
+An den zentralen Haltestellen ZOB und Nordbahnhof verweisen Linienbezeichnungen in Braille-Schrift auf die jeweilige Bussteignummer.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+N4.3: Barrierefreie Mobilität für alle Menschen
