--- a/meta/11-3.md
+++ b/meta/11-3.md
@@ -31,3 +31,5 @@ reporting_status: inprogress
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+V1.1: Abbau von Ungleichheiten zwischen Stadtteilen und Bevölkerungsschichten
