--- a/meta/11-5.md
+++ b/meta/11-5.md
@@ -31,4 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Bei Verkehrsunfällen Getötete oder Schwerverletzte. Tendenz gleichbleibend mit leichtem Anstieg 2022.
+Bei Verkehrsunfällen Getötete oder Schwerverletzte. Tendenz gleichbleibend mit leichtem Anstieg 2022.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+N4.5: Verbesserung der Verkehrssicherheit
