--- a/meta/11-6.md
+++ b/meta/11-6.md
@@ -31,4 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anzahl an Beteiligten an Unfällen mit Personenschaden. Starker Rückgang seit 2020. Rückgang von 2019 auf 2020 u.a. auch auf Kontaktbeschränkungen durch Covid-Politik zurückzuführen. <br> 
+Anzahl an Beteiligten an Unfällen mit Personenschaden. Starker Rückgang seit 2020. Rückgang von 2019 auf 2020 u.a. auch auf Kontaktbeschränkungen durch Covid-Politik zurückzuführen. <br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+N4.5: Verbesserung der Verkehrssicherheit
