--- a/meta/11-7.md
+++ b/meta/11-7.md
@@ -31,4 +31,7 @@ reporting_status: inprogress
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Verhältnis naturhaushaltwirksamer Flächen zur gesamten Grundstücksfläche. <br>
+Verhältnis naturhaushaltwirksamer Flächen zur gesamten Grundstücksfläche.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+N3.4: Schutz und Ausbau von Grünflächen und öffentlichem Raum für alle
