--- a/meta/11-8.md
+++ b/meta/11-8.md
@@ -31,4 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anteil Heizenergien oder Fernwärme in fertiggestellten Wohngebäuden in Prozent. <br>
+Anteil Heizenergien oder Fernwärme in fertiggestellten Wohngebäuden in Prozent.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+N3.3: Förderung von nachhaltigem Bauen und vermehrte Nutzung von Leerständen und Baulücken, Erhöhung der Sanierungsquote
