--- a/meta/11-9.md
+++ b/meta/11-9.md
@@ -31,4 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Der Anteil der Siedlungs- und Verkehrsfläche an der Gesamtfläche in Prozent. Dies entspricht nährungsweise dem Anteil der versiegelten Fläche. <br>
+Der Anteil der Siedlungs- und Verkehrsfläche an der Gesamtfläche in Prozent. Dies entspricht nährungsweise dem Anteil der versiegelten Fläche.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+K2.3: Vernetzung, Entwicklung und Erhalt schützenswerter Flächen
