--- a/meta/12-1.md
+++ b/meta/12-1.md
@@ -32,3 +32,6 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Abfallmenge der privaten Haushalte in Tonne je Einwohner/-in. <br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+K4.2: Förderung der Müllvermeidung und Mülltrennung
