--- a/meta/12-3.md
+++ b/meta/12-3.md
@@ -32,3 +32,6 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Die Kampagne Fairtrade-Schools bietet Schulen die Möglichkeit, sich aktiv für eine bessere Welt einzusetzen und Verantwortung zu übernehmen. Die Kampagne verankert das Thema fairer Handel im Schulalltag und schafft bei Schüle/-rinnen ein Bewusstsein für nachhaltige Entwicklung. Die erste Fairtrade-School wurde in Ingolstadt 2015 ausgezeichnet. Seitdem haben 4 weitere Schulen den Zertifizierungsprozess durchlaufen. Darüber hinaus existieren zahlreiche weitere Auszeichnungen wie z.B. Umweltschulen. <br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+B2.1: Verankerung der Bildung für nachhaltige Entwicklung (BNE) in schulischen, außerschulischen und informellen Bildungsangeboten
