--- a/meta/12-4.md
+++ b/meta/12-4.md
@@ -32,3 +32,6 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Die Stadt Ingolstadt ist seit 2014 als Fairtrade-Town zertifiziert. Seitdem hat die Stadt 4 weitere Zertifizierungsprozesse durchlaufen. Eine Zertifizierung wird alle 2 Jahre durchgeführt. <br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+N1.7: Unterstützung der Vermarktungsstrukturen regionaler, fairer und ökologischer Produkte und somit des regionalen Konsums
