--- a/meta/12-5.md
+++ b/meta/12-5.md
@@ -31,4 +31,7 @@ reporting_status: notapplicable
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Zurzeit sind keine Daten für Ingolstadt vorhanden, da Materialien aus der gesamten Region zusammengeführt werden.
+Zurzeit sind keine Daten für Ingolstadt vorhanden, da Materialien aus der gesamten Region zusammengeführt werden. <br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+K4.2: Förderung der Müllvermeidung und Mülltrennung
