--- a/meta/12-6.md
+++ b/meta/12-6.md
@@ -31,4 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Veröffentlichung im Rahmen des Jahresabschlusses der Ingolstädter Kommunalbetriebe (INKB). 
+Veröffentlichung im Rahmen des Jahresabschlusses der Ingolstädter Kommunalbetriebe (INKB).  <br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+N1.5: Mehr Selbstversorgung und Urban Gardening fördern
