--- a/meta/13-2.md
+++ b/meta/13-2.md
@@ -31,3 +31,5 @@ reporting_status: inprogress
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+K1.1: Reduktion von Treibhausgasemissionen: klimaneutral stadtweit bis 2035
