--- a/meta/14-1.md
+++ b/meta/14-1.md
@@ -32,4 +32,7 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Im Rahmen der Umsetzung der EU-WRRL-Richtlinie wird im Bereich der Stadt Ingolstadt für folgende Gewässer der Zustand bzw. das ökologische Potential ermittelt:
-Donau, Schutter, Sandrach, Mailinger Bach. Das gute ökologische Potential hat bisher nur die Donau erreicht – daher beträgt die Anzahl der Fließgewässer, die mindestens mit "gut" beurteilt wurden 25%. Die Bewirtschaftungspläne werden alle 6 Jahre fortgeschrieben, d.h. dass sich von 2019 bis 2021 keine Veränderungen ergeben haben. <br> 
+Donau, Schutter, Sandrach, Mailinger Bach. Das gute ökologische Potential hat bisher nur die Donau erreicht – daher beträgt die Anzahl der Fließgewässer, die mindestens mit "gut" beurteilt wurden 25%. Die Bewirtschaftungspläne werden alle 6 Jahre fortgeschrieben, d.h. dass sich von 2019 bis 2021 keine Veränderungen ergeben haben. <br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+K2.3: Vernetzung, Entwicklung und Erhalt schützenswerter Flächen
