--- a/meta/15-2.md
+++ b/meta/15-2.md
@@ -31,3 +31,5 @@ reporting_status: inprogress
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+K2.3: Vernetzung, Entwicklung und Erhalt schützenswerter Flächen
