--- a/meta/15-3.md
+++ b/meta/15-3.md
@@ -31,4 +31,7 @@ reporting_status: inprogress
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Derzeit nur veraltete Daten ohne digitale Abrufbarkeit von Zahlen vorliegend, Aktualisierung durch biol. Kartierung (LfU) geplant. Auswertung 2023 abgeschlossen.
+Derzeit nur ältere Daten ohne digitale Abrufbarkeit von Zahlen vorliegend, Aktualisierung durch biol. Kartierung (LfU) geplant. Auswertung 2023 abgeschlossen.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+K2.5: Schutz und Begünstigung der Biodiversität
