--- a/meta/15-4.md
+++ b/meta/15-4.md
@@ -31,4 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anglegte Ausgleichsflächen entsprechend den Vorgaben der zur Satzung beschlossenen Bebauungspläne.
+Anglegte Ausgleichsflächen entsprechend den Vorgaben der zur Satzung beschlossenen Bebauungspläne.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+K4.3: Ressourcenschonender Umgang mit Flächen und Baustoffen – Förderung der Wiederverwendbarkeit und Wiederverwendung von Baustoffen
