--- a/meta/15-5.md
+++ b/meta/15-5.md
@@ -31,4 +31,8 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Die Waldflächenbilanz ergibt sich aus den Ab- und Zugängen bewaldeter Flächen. Die Angaben beziehen sich auf die gesamte Region 10. Eine Bilanz nur für das Stadtgebiet Ingolstadt wird derzeit nicht erstellt. <br>  
+Die Waldflächenbilanz ergibt sich aus den Ab- und Zugängen bewaldeter Flächen. Die Angaben beziehen sich auf die gesamte Region 10. Eine Bilanz nur für das Stadtgebiet Ingolstadt wird derzeit nicht erstellt.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+K2.2: Unterstützung einer naturnahen Forstwirtschaft und Erhalt der Waldfläche
+
