--- a/meta/16-2.md
+++ b/meta/16-2.md
@@ -31,4 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Die Stadt Ingolstadt verfügt über ein breites Beteiligungsangebot für Bürger/-innen, die das politische und gesellschaftliche Geschehen der Stadt aktiv mitgestalten möchten. Informationen über das gesamte Angebot als <a href="https://www.ingolstadt.de/output/download.php?fid=3052.1656.1.PDF">PDF</a>.
+Die Stadt Ingolstadt verfügt über ein breites Beteiligungsangebot für Bürger/-innen, die das politische und gesellschaftliche Geschehen der Stadt aktiv mitgestalten möchten. Informationen über das gesamte Angebot als <a href="https://www.ingolstadt.de/output/download.php?fid=3052.1656.1.PDF">PDF</a>. <br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+V1.7: Förderung einer barrierefreien, inklusiven und geschlechterunabhängigen Bürgerbeteiligung
