--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -51,7 +51,7 @@
 9-1-title: Anzahl der angesiedelten Unternehmen in brigk und EGZ
 9-2-title: Breitbandversorgung - private Haushalte
 9-3-title: Existenzgründungen
-9-4-title: sv-Beschäftigte mit Hochschulabschluss (Arbeitsort, im Juni)
+9-4-title: sv-Beschäftigte mit Hochschulabschluss
 
 10-1-title: Anteil der Schüler/-innen an Sonderpädagogischen Förderzentren
 10-2-title: Anzahl der gemeldeten Diskriminierungsfälle
