--- a/meta/9-4.md
+++ b/meta/9-4.md
@@ -35,4 +35,6 @@ Anzahl der sozialversicherungspflichtig Beschäftigten mit Hochschulabschluss in
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 W3.3: Erreichung gleicher wirtschaftlicher Unabhängigkeit durch gleiche und gleichwertige Arbeit
+Arbeitsort: Ingolstadt
+Stichtag: Juni
 
