--- a/meta/17-2.md
+++ b/meta/17-2.md
@@ -31,4 +31,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Manisa/Türkei, Moskau Zentralbezirk/Russland (derzeit ruhend), Murska Sobota/Slowenien. Zudem Projektpartnerschaft Legmoin/Burkina Faso und Patenschaften für Heimatverbände; Auswirkungen der Pandemie auf Durchführung von Veranstaltungen ab 2020.
+Manisa/Türkei, Moskau Zentralbezirk/Russland (derzeit ruhend), Murska Sobota/Slowenien. Zudem Projektpartnerschaft Legmoin/Burkina Faso und Patenschaften für Heimatverbände; Auswirkungen der Pandemie auf Durchführung von Veranstaltungen ab 2020.<br>
+<br>
+<b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
+V2.7: Interkommunale/r, überregionale/r und internationale/r Austausch und Zusammenarbeit
