--- a/meta/11-2.md
+++ b/meta/11-2.md
@@ -8,14 +8,16 @@ indicator_sort_order: 11-02-01
 # 2. Grafikart auswaehlen: 
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: bar  # chart types include: bar, line, binary 
-graph_stacked_disaggregation: Maßnahme Barrierefreiheit  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
+#graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: Anzahl barrierefreier Bushaltestellen
 data_start_values:  # initialize the field to be shown  
- - field: Maßnahme Barrierefreiheit 
+ - field: Bushaltestelle
+   value: Gesamt 
+ - field: Bushaltestelle 
    value: Kassler Sonderboard 
- - field: Maßnahme Barrierefreiheit 
+ - field: Bushaltestelle 
    value: Vorlesetaster für Blinde 
- - field: Maßnahme Barrierefreiheit 
+ - field: Bushaltestelle 
    value: Taktikeles Leitsystem 
 
 # 3. Berechnung und Quelle eingeben: 
