--- a/meta/4-1.md
+++ b/meta/4-1.md
@@ -10,17 +10,22 @@ data_non_statistical: false  # set to 'false' for chart/graph visualization
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: Anzahl der Studierenden an der Technischen Hochschule Ingolstadt (THI) und der Katholischen Universität Eichstätt-Ingolstadt (KU)
+
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+  - field: Einrichtung 
+    value: Gesamt 
+  - field: Einrichtung 
+    value: THI
+  - field: Einrichtung 
+    value: KU 
+  - field: Einrichtung 
+    value: WFI 
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE: "Technische Hochschule Ingolstadt und Katholische Universität Eichstätt-Ingolstadt"  # data source  
+SOURCE_TYPE: Technische Hochschule Ingolstadt und Katholische Universität Eichstätt-Ingolstadt  # data source  
 source_earliest_available_1: 2019
 source_periodicity_1: Jährlich
 
