--- a/meta/4-1.md
+++ b/meta/4-1.md
@@ -36,7 +36,7 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anzahl der Studierenden der Technischen Hochschule Ingolstadt und der Katholischen Universität Eichstätt-Ingolstadt immer zum 1.12. des jeweiligen Jahres.<br>
+Anzahl der Studierenden der Technischen Hochschule Ingolstadt (THI), Wirtschaftsfakultät Ingolstadt (WFI) und der Katholischen Universität Eichstätt-Ingolstadt (KU) immer zum 1.12. des jeweiligen Jahres.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
 W2.3: Förderung der Wissenschaft und deren Vernetzung mit Gesellschaft und Wirtschaft (in allen Branchen, Unternehmensformen/-größen)
