--- a/meta/11-2.md
+++ b/meta/11-2.md
@@ -11,13 +11,13 @@ graph_type: bar  # chart types include: bar, line, binary
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: Bushaltestellen und Ausstattung
 data_start_values:  # initialize the field to be shown  
- - field: Bushaltestelle
+ - field: Haltestellen
    value: Gesamt 
- - field: Bushaltestelle 
+ - field: Haltestellen
    value: Kassler Sonderboard 
- - field: Bushaltestelle 
+ - field: Haltestellen
    value: Vorlesetaster für Blinde 
- - field: Bushaltestelle 
+ - field: Haltestellen 
    value: Taktikeles Leitsystem 
 
 # 3. Berechnung und Quelle eingeben: 
