--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -41,6 +41,7 @@
 
 7-1-title: Strom aus Windkraft
 7-2-titel: Zubau in Kilowatt Peak
+7-3-titel: CO2e-Emissionen
 
 8-1-title: Aufstocker (Anteil der erwerbstätigen ALG-II Bezieher/-innen an allen erwerbsfähigen Leistungsbezieher/-innen)
 8-2-title: Beschäftigungsquote (15- bis 64-Jährige)
