--- a/meta/7-2.md
+++ b/meta/7-2.md
@@ -24,7 +24,7 @@ computation_definitions:
 
 SOURCE_TYPE: "Stabsstelle Strategien Klima, Biodiversität und Donau" # data source  
 source_earliest_available_1: 2018
-source_periodicity_1: Alle zwei Jahre
+source_periodicity_1: jährlich
 
 language: de   
 published: true 
