--- a/meta/7-3.md
+++ b/meta/7-3.md
@@ -41,4 +41,4 @@ Die CO2-Emissionen sind als CO2-Äquivalente (CO2e) angegeben und umfassen demen
 Ab 2021 werden die Daten alle 2 Jahre erhoben.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-K1.1: K1.1: Reduktion von Treibhausgasemissionen: klimaneutral stadtweit bis 2035
+K1.1: Reduktion von Treibhausgasemissionen: klimaneutral stadtweit bis 2035
