--- a/meta/7-3.md
+++ b/meta/7-3.md
@@ -39,6 +39,7 @@ reporting_status: complete
 ---
 Die CO2-Emissionen sind als CO2-Äquivalente (CO2e) angegeben und umfassen dementsprechend auch alle weiteren Treibhausgase neben CO2. <br>
 Ab 2021 werden die Daten alle 2 Jahre erhoben.<br>
+<b>Erläuterung: GHD-Emissionen sind alle Emissionen des Sektor Gewerbe, Handel, Dienstleistungen und übrige Verbraucher</b><br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
 K1.1: Reduktion von Treibhausgasemissionen: klimaneutral stadtweit bis 2035
