--- a/meta/7-3.md
+++ b/meta/7-3.md
@@ -38,7 +38,7 @@ reporting_status: complete
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
 Die CO2-Emissionen sind als CO2-Äquivalente (CO2e) angegeben und umfassen dementsprechend auch alle weiteren Treibhausgase neben CO2. <br>
-Die CO2-Bilanz wird momentan alle 2 Jahre aktualisiert, da auf dieser jährlich zu kleinteilig ist, um eine wirkliche Entwicklung feststellen zu können und der Erhebungsaufwand dementsprechend hoch. Die nächste Bilanz wird daher gegen Mitte 2025 mit den Daten von 2023 vorliegen. <br>
+Die CO2-Bilanz wird momentan alle 2 Jahre aktualisiert, da auf dieser Ebene jährlich zu kleinteilig ist, um eine wirkliche Entwicklung feststellen zu können und der Erhebungsaufwand dementsprechend hoch. Die nächste Bilanz wird daher gegen Mitte 2025 mit den Daten von 2023 vorliegen. <br>
 <br>
 <b>Erläuterung: GHD-Emissionen sind alle Emissionen des Sektor Gewerbe, Handel, Dienstleistungen und übrige Verbraucher</b><br>
 <br>
