--- a/meta/7-2.md
+++ b/meta/7-2.md
@@ -12,11 +12,13 @@ graph_type: line  # chart types include: bar, line, binary
 computation_units: Zubau in Kilowatt Peak 
 data_start_values:  # initialize the field to be shown  
  - field: Group 
-   value: Zubau in kWp seit 1993 
+   value: Zubau in kWp 1993 bis 2018
  - field: Group 
-   value: Zubau in kWp
+   value: Zubau in kWp ab 2019
  - field: Group 
-   value: kWp Gesamt 
+   value: kWp Gesamt
+ - field: Group 
+   value: kWp Gesamt Stadt Ingolstadt   
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
