--- a/meta/7-2.md
+++ b/meta/7-2.md
@@ -9,16 +9,16 @@ indicator_sort_order: 07-02-01
 data_non_statistical: false  # set to 'false' for chart/graph visualization 
 graph_type: line  # chart types include: bar, line, binary 
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
-computation_units: Zubau in Kilowatt Peak 
+computation_units: kWp 
 data_start_values:  # initialize the field to be shown  
  - field: Group 
    value: Zubau in kWp 1993 bis 2018
  - field: Group 
-   value: Zubau in kWp ab 2019
+   value: Zubau in kWp
  - field: Group 
-   value: kWp Gesamt
+   value: Gesamt
  - field: Group 
-   value: kWp Gesamt Stadt Ingolstadt   
+   value: Gesamt städtische Anlagen   
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
