--- a/meta/7-2.md
+++ b/meta/7-2.md
@@ -14,11 +14,11 @@ data_start_values:  # initialize the field to be shown
  - field: Group 
    value: Zubau in kWp 1993 bis 2018
  - field: Group 
-   value: Zubau in kWp
+   value: Zubau in kWp ab 2019
  - field: Group 
-   value: Gesamt
+   value: Gesamtleistung Ingolstadt
  - field: Group 
-   value: Gesamt städtische Anlagen   
+   value: Gesamtleistung städtische Anlagen   
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
