--- a/meta/7-2.md
+++ b/meta/7-2.md
@@ -11,13 +11,13 @@ graph_type: bar  # chart types include: bar, line, binary
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: kWp 
 data_start_values:  # initialize the field to be shown  
- - field: Group 
+ - field: kWp 
    value: Zubau in kWp 1993 bis 2018
- - field: Group 
+ - field: kWp 
    value: Zubau in kWp ab 2019
- - field: Group 
+ - field: kWp 
    value: Gesamtleistung Ingolstadt
- - field: Group 
+ - field: kWp 
    value: Gesamtleistung städtische Anlagen   
 
 # 3. Berechnung und Quelle eingeben: 
