--- a/meta/7-3.md
+++ b/meta/7-3.md
@@ -11,15 +11,15 @@ graph_type: line  # chart types include: bar, line, binary
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: CO2e-Emissionen 
 data_start_values:  # initialize the field to be shown  
- - field: Group 
+ - field: Sektoren 
    value: Haushalte 
- - field: Group 
+ - field: Sektoren 
    value: Industrie
- - field: Group 
+ - field: Sektoren 
    value: GHD
- - field: Group 
+ - field: Sektoren 
    value: Verkehr 
- - field: Group 
+ - field: Sektoren 
    value: Gesamtemissionen
 
 # 3. Berechnung und Quelle eingeben: 
