--- a/meta/1-1.md
+++ b/meta/1-1.md
@@ -11,10 +11,12 @@ graph_type: line  # chart types include: bar, line, binary
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: Anzahl Unterbringungen von Obdachlosen   
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Unterbringung 
+   value: Unterbringung 
+ - field: Unterbringung 
+   value: Vermittlung in eigenen Wohnraum
+ - field: Unterbringung 
+   value: Vermittlung in Therapie oder sonstige stat. Einrichtung  
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
