--- a/meta/1-5.md
+++ b/meta/1-5.md
@@ -33,5 +33,15 @@ reporting_status: complete
 ---
 Empfänger/-innen von Grundsicherung nach SGB II insgesamt in % der Einwohner unter 65.<br>
 <br>
+Mit dem Begriff Grundsicherung für Arbeitsuchende wird eine staatliche Sozialleistung für arbeitsuchende Menschen bezeichnet. Sie soll ihnen dabei helfen, ihren Lebensunterhalt zu decken, wenn die eigenen Mittel dafür nicht ausreichen.<br>
+<br>
+Wer Grundsicherung für Arbeitsuchende bekommt, wird in eine Regelbedarfsstufe eingruppiert. Diese Einteilung berücksichtigt die persönliche Situation – zum Beispiel, ob eine Person alleinstehend ist oder mit ihrer Familie zusammenlebt und deshalb mehr Unterstützung braucht.<br>
+<br>
+Grundsicherung für Arbeitsuchende können erwerbsfähige Menschen beziehen und nicht erwerbsfähige Personen, die mit erwerbsfähigen in einer sogenannten Bedarfsgemeinschaft leben.<br>
+<br>
+Die Grundsicherung (beziehungsweise Bürgergeld) wird aus Steuermitteln finanziert. Diese Leistung kann beim zuständigen Jobcenter beantragt werden.<br>
+<br>
+Quelle: <a href="https://www.arbeitsagentur.de/lexikon/grundsicherung">Bundesagentur für Arbeit</a><br>
+<br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
 V1.10: Armutsbekämpfung
