--- a/meta/1-6.md
+++ b/meta/1-6.md
@@ -35,7 +35,7 @@ Empfänger/-innen von sozialer Mindestsicherung insgesamt (ohne Asylbewerber und
 <br>
 Die sozialen Mindestsicherungsleistungen sind für verschiedene Personengruppen da: Bezieher von Arbeitslosengeld II, von Sozialgeld, von Hilfe zum Lebensunterhalt außerhalb von Einrichtungen, von Grundsicherung im Alter und bei Erwerbsminderung sowie von Regelleistungen nach dem Asylbewerberleistungsgesetz. Deutschlandweit erhalten 2020 etwa 6,9 Millionen Menschen Mindestsicherungsleistungen, was 8,3 Prozent an der Gesamtbevölkerung entspricht.<br>
 <br>
-Quelle: <a href="https://www.deutschlandatlas.bund.de/DE/Karten/Wie-wir-arbeiten/080/_node.html=>Deutschlandatlas des Bundes</a><br>
+Quelle: <a href="https://www.deutschlandatlas.bund.de/DE/Karten/Wie-wir-arbeiten/080/_node.html">Deutschlandatlas des Bundes</a><br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
 V1.10: Armutsbekämpfung
