--- a/meta/8-4.md
+++ b/meta/8-4.md
@@ -11,10 +11,12 @@ graph_type: line  # chart types include: bar, line, binary
 #graph_stacked_disaggregation: Gruppe  ## uncomment this line for stacked bars. eplace 'Geschlecht' with the field of aggregation. 
 computation_units: Drittmittelvolumen der Technischen Hochschule Ingolstadt (THI) und der Katholischen Universität Eichstätt-Ingolstadt (KU) in EURO 
 data_start_values:  # initialize the field to be shown  
- - field: Region 
-   value: Ingolstadt 
- - field: Region 
-   value: Bayern 
+ - field: Einrichtung 
+   value: Gesamt 
+ - field: Einrichtung 
+   value: THI
+ - field: Einrichtung 
+   value: KU   
 
 # 3. Berechnung und Quelle eingeben: 
 national_geographical_coverage: Ingolstadt 
