--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -40,7 +40,7 @@
 6-4-title: Verhältnis von Trennsystemen zu Mischwasserkanälen
 
 7-1-title: Strom aus Windkraft
-7-2-title: Zubau in Kilowatt Peak
+7-2-title: Zubau Photovoltaikanlagen in Kilowatt Peak
 7-3-title: CO2e-Emissionen
 
 8-1-title: Aufstocker (Anteil der erwerbstätigen ALG-II Bezieher/-innen an allen erwerbsfähigen Leistungsbezieher/-innen)
