--- a/meta/7-2.md
+++ b/meta/7-2.md
@@ -12,9 +12,9 @@ graph_type: bar  # chart types include: bar, line, binary
 computation_units: kWp 
 data_start_values:  # initialize the field to be shown  
  - field: kWp 
-   value: Zubau in kWp 1993 bis 2018
+   value: Zubau 1993 bis 2018
  - field: kWp 
-   value: Zubau in kWp ab 2019
+   value: Zubau ab 2019
  - field: kWp 
    value: Gesamtleistung Ingolstadt
  - field: kWp 
