--- a/meta/7-2.md
+++ b/meta/7-2.md
@@ -24,7 +24,7 @@ data_start_values:  # initialize the field to be shown
 national_geographical_coverage: Ingolstadt 
 computation_definitions: 
 
-SOURCE_TYPE: "Stabsstelle Strategien Klima, Biodiversität und Donau" # data source  
+SOURCE_TYPE: <a href="https://www.ingolstadt.de/Rathaus/Verwaltung-Beteiligung/Adressen/Stabsstelle-Klima-Biodiversit%C3%A4t-Donau.php?object=tx,2789.1.1&ModID=9&FID=465.3033.1&NavID=2789.173&La=1">Stabsstelle Strategien Klima, Biodiversität und Donau</a> # data source  
 source_earliest_available_1: 2018
 source_periodicity_1: jährlich
 
