--- a/translations/de/global_indicators.yml
+++ b/translations/de/global_indicators.yml
@@ -65,7 +65,7 @@
 
 11-1-title: Anteil (lokal) emissionsfreier Fahrzeuge bei Zulassung
 11-2-title: Anzahl barrierefreier Bushaltestellen
-11-3-title: Anzahl Bauliche Anlagen, öffentliche Wege, Plätze und Straßen, Verkehrsanlagen und Beförderungsmittel und digitale Barrierefreiheit in der Stadt (ggf. aufteilen)
+11-3-title: Anzahl Bauliche Anlagen, öffentliche Wege, Plätze und Straßen, Verkehrsanlagen und Beförderungsmittel und digitale Barrierefreiheit in der Stadt
 11-4-title: Anzahl Gefahrenzonen in Starkregenkartierung
 11-5-title: Bei Verkehrsunfällen Getötete oder Schwerverletzte
 11-6-title: Beteiligte an Unfällen mit Personenschaden
