--- a/meta/1-3.md
+++ b/meta/1-3.md
@@ -42,4 +42,6 @@ Die Grundsicherung (beziehungsweise Bürgergeld) wird aus Steuermitteln finanzie
 Quelle: <a href="https://www.arbeitsagentur.de/lexikon/grundsicherung">Bundesagentur für Arbeit</a><br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
-V1.10: Armutsbekämpfung
+V1.10: Armutsbekämpfung<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
