--- a/meta/1-6.md
+++ b/meta/1-6.md
@@ -38,4 +38,6 @@ Die sozialen Mindestsicherungsleistungen sind für verschiedene Personengruppen 
 Quelle: <a href="https://www.deutschlandatlas.bund.de/DE/Karten/Wie-wir-arbeiten/080/_node.html">Deutschlandatlas des Bundes</a><br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt:</b><br>
-V1.10: Armutsbekämpfung
+V1.10: Armutsbekämpfung<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
