--- a/meta/10-1.md
+++ b/meta/10-1.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Erfasste Förderschulen (SFZI, SFZII (beide städtisch) und JNVK (staatlich)); Ermittlung des Indikators umfasst auch die privaten Schulen; Berechnung jedoch ohne die Schüler/-innen an Technikerschule und Berufsfachschulen. Anteil an Gesamtschülerzahl Stadt Ingolstadt.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-B2.4: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit
+B2.4: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
