--- a/meta/10-2.md
+++ b/meta/10-2.md
@@ -34,4 +34,6 @@ reporting_status: inprogress
 Einrichtung der Antidiskriminierungsstelle in Ingolstadt 2023. Bisher konnten noch keine Daten gesammelt werden.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-V1.1: Abbau von Ungleichheiten zwischen Stadtteilen und Bevölkerungsschichten
+V1.1: Abbau von Ungleichheiten zwischen Stadtteilen und Bevölkerungsschichten<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
