--- a/meta/10-3.md
+++ b/meta/10-3.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Zur ausländischen Bevölkerung zählen alle Personen, die nicht Deutsche im Sinne des Art. 116 Abs. 1 GG sind, d. h. nicht die deutsche Staatsangehörigkeit besitzen. Zu ihnen gehören auch die Staatenlosen und die Personen mit ungeklärter Staatsangehörigkeit. Deutsche, die zugleich eine fremde Staatsangehörigkeit besitzen, gehören nicht zu den Ausländer/-innen.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-W3.3: Erreichung gleicher wirtschaftlicher Unabhängigkeit durch gleiche und gleichwertige Arbeit
+W3.3: Erreichung gleicher wirtschaftlicher Unabhängigkeit durch gleiche und gleichwertige Arbeit<br>
+<br>
+<b>BNK-Indikator</b>
