--- a/meta/10-4.md
+++ b/meta/10-4.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Schulabbrecherquote ausländischer Schüler im Verhältnis zur Schulabbrecherquote in der Gesamtbevölkerung. Als Schulabbruch wird ein Schulabgang ohne Hauptschulabschluss verstanden. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-B2.4: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit
+B2.4: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit<br>
+<br>
+<b>BNK-Indikator</b>
