--- a/meta/10-5.md
+++ b/meta/10-5.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Prozentualer Anteil der Kinder mit sprachlichen Auffälligkeiten bei der Schuleingangsuntersuchung (Kinder mit und ohne Migrationshintergrund).<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-B2.4: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit
+B2.4: Förderung der Bildungsteilhabe bzw. Bildungsgerechtigkeit<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
