--- a/meta/10-6.md
+++ b/meta/10-6.md
@@ -31,4 +31,6 @@ reporting_status: complete
  
 # Für Leittext für den Indikator nach den Stichen '---' einfügen. 
 ---
-Anzahl der Einbürgerungen pro Jahr in Ingolstadt. Absolute Zahlen.
+Anzahl der Einbürgerungen pro Jahr in Ingolstadt. Absolute Zahlen.<br>
+<br>
+<b>BNK-Indikator</b>
