--- a/meta/11-1.md
+++ b/meta/11-1.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Anteil der reinen Elektrofahrzeuge am Gesamtbestand in %, jeweils zum 01.01.<br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-N4.4: Elektro-Mobilität
+N4.4: Elektro-Mobilität<br>
+<br>
+<b>Ingolstadtspezifischer Indikator</b>
