--- a/meta/11-10.md
+++ b/meta/11-10.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Die prozentuale Änderungsrate von Siedlungs- und Verkehrsflächen im Vergleich zum Vorjahr in Prozent. <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-K2.3: Vernetzung, Entwicklung und Erhalt schützenswerter Flächen
+K2.3: Vernetzung, Entwicklung und Erhalt schützenswerter Flächen<br>
+<br>
+<b>BNK-Indikator</b>
