--- a/meta/11-11.md
+++ b/meta/11-11.md
@@ -34,4 +34,6 @@ reporting_status: complete
 Siedlungs- und Verkehrsfläche in m² pro Einwohner/-in, die in Ingolstadt genutzt werden.  <br>
 <br>
 <b>Ziel Nachhaltigkeitsagenda Ingolstadt</b><br>
-K2.3: Vernetzung, Entwicklung und Erhalt schützenswerter Flächen
+K2.3: Vernetzung, Entwicklung und Erhalt schützenswerter Flächen<br>
+<br>
+<b>BNK-Indikator</b>
